# anchor-fuzzing

./: Cargo.toml
fuzz/: README.md
fuzz/anchor-test/: Cargo.toml
fuzz/anchor-test/anchor-fuzz-macro/: Cargo.toml
fuzz/anchor-test/anchor-fuzz-macro/src/: lib.rs
fuzz/anchor-test/anchor-test-macro/: Cargo.toml
fuzz/anchor-test/anchor-test-macro/src/: lib.rs
fuzz/anchor-test/src/: generator.rs  lib.rs
fuzz/anchor-test/src/helpers/: mod.rs  mollusk.rs
fuzz/examples/anchor-counter/: .pnp.cjs  Anchor.toml  package.json
fuzz/examples/anchor-counter/programs/anchor-counter/: Cargo.toml
fuzz/examples/anchor-counter/programs/anchor-counter/src/: lib.rs
fuzz/examples/anchor-counter/programs/anchor-counter/tests/: test_fuzz.rs
