[package]
name = "anchor_counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { path = "../../../../../lang" }

[dev-dependencies]
anchor-test = { path = "../../../../anchor-test" }
solana-sdk = "2.2.1"
solana-program = "2.2.1"
mollusk-svm = "0.4"
